--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -9,33 +9,43 @@
 <body>
 <div class="container">
     <aside>
-        <img class="logo" src="img/logo.png" alt="logo"/>
-        <div class="aside-menu">
-            <div class="aside-item">
-                <img class="item-image" src="img/tastemakers.svg" alt="" />
-                <a class="item-link" href="#">Tastemakers</a>
-            </div>
-            <div class="aside-item">
+        <a href="#"><img class="logo" src="img/logo.png" alt="logo"/></a>
+        <ul class="aside-menu">
+            <li class="aside-item">
+                <a href="#" class="item-link">
+                <img class="item-image" src="img/tastemakers.svg" alt="Tastemakers" />
+                    <span>Tastemakers</span>
+                </a>
+            </li>
+            <li class="aside-item">
+                <a href="#" class="item-link">
                 <img class="item-image" src="img/blog.svg" alt="blog" />
-                <a class="item-link" href="#">Blog</a>
-            </div>
-            <div class="aside-item">
-               <img class="item-image" src="img/theAList.svg" alt="the A-List" />
-                <a class="item-link" href="#">The A-List</a>
-            </div>
-            <div class="aside-item">
-                <img class="item-image" src="img/contribure.svg" alt="" />
-                <a class="item-link" href="#">Contribure</a>
-            </div>
-            <div class="aside-item">
-                <img class="item-image" src="img/about.svg" alt="" />
-                <a class="item-link" href="#">About</a>
-            </div>
-        </div>
+                    <span>Blog</span>
+                </a>
+            </li>
+            <li class="aside-item">
+                <a href="#" class="item-link">
+                <img class="item-image" src="img/theAList.svg" alt="the A-List" />
+                    <span>The A-List</span>
+                </a>
+            </li> 
+            <li class="aside-item">
+                <a href="#" class="item-link">
+                    <img class="item-image" src="img/contribure.svg" alt="Contribure" />
+                    <span>Contribure</span>
+                </a>
+            </li>
+            <li class="aside-item">
+                <a href="#" class="item-link">
+                <img class="item-image" src="img/about.svg" alt="About" />
+                        <span>About</span>
+                    </a>
+            </li>
+        </ul>
         <div class="aside-tweet">
             <p class="aside-title">Latest tweet</p>
             <button class="button-tweet">
-                <img src="img/twitter-icon.svg" alt="tweet">
+                <img src="img/twitter-icon.svg" alt="tweet" />
                 <span>Join the Conversation</span>
             </button>
         </div>
@@ -43,45 +53,47 @@
             <p class="aside-title">Let’s be friends!</p>
             <p class="aside-text">For weekly finds, community recommendations, and more, like us on Facebook.</p>
             <button class="button-tweet">
-                <img src="img/twitter-icon.svg" alt="tweet">Join the Community</button>
+                <img src="img/twitter-icon.svg" alt="tweet" /><span> Join the Community</span></button>
         </div>
     </aside>
 
 <main>
     <section class="banner">
-        <img class="banner-image" src="img/banner.jpg" alt="">
+        <div class="banner-wrapper">
+        <img class="banner-image" src="img/banner.jpg" alt="Banner" />
         <div class="banner-text">
         <div class="banner-header">
-            <span>Share your Foor Sence</span>
+            Share your Foor Sence
         </div>
             <div class="banner-description">Submit yout favorite recipes, become a contributor, or get interviewed.</div>
         </div>
+    </div>
 </section>
-<!-- /.banner -->
+
     <section class="tabs">
         <div class="tab">
             <p class="tab-title">Tastemakers</p>
             <p class="tab-description">Feast your eyes & get reciepes!</p>
         </div>
-        <!-- /.tab -->
+
         <div class="tab">
             <p class="tab-title">Blog</p>
             <p class="tab-description">News, how-tos, stories, and more</p>
         </div>
-        <!-- /.tab -->
+
         <div class="tab">
             <p class="tab-title">The A-List</p>
             <p class="tab-description">Handpicked, absolute favorites</p>
         </div>
-        <!-- /.tab -->
+
         
         <div class="tab active">
             <p class="tab-title">Contribute</p>
             <p class="tab-description">We want to hear from you</p>
         </div>
-        <!-- /.tab -->
+
     </section>
-    <!-- /.tabs -->
+
 <section class="subscribe">
         <img src="img/mail.svg" alt="mail" class="subscribe-image">
         <p class="subscribe-text">Sign up for out newsletter to receive a handpicked selection
@@ -91,54 +103,51 @@
         <button class="subscribe-button">Subscribe</button>
     </form>
 </section>
-<!-- /.subscribe -->
+
 <seсtion class="cards">
     <div class="card">
         <div class="card-image">
             <img src="img/card-image1.jpg" alt="image"></div>
         <div class="card-title">2012's Best Summer Cookbooks</div>
         <div class="card-description">With the best of the season coming from “orchards, farms and gardens,” NPR has put together an impressive collection of 10 summer cookbooks.</div>
-        <p class="card-date">May 23, 2012 /<a class="card-read">Read...</a></p>
+        <div class="card-footer"><span> May 23, 2012 /</span><a class="card-read">Read...</a></div>
     </div>
-    <!-- /.card -->
+
     <div class="card">
         <div class="card-image">
             <img src="img/card-image2.jpg" alt="image"></div>
         <div class="card-title">How to Make Vegetable Chips</div>
         <div class="card-description">About a month ago, I ate almost an entire box of kale chips. My brother and I were visiting our cousin in Brooklyn, and before a very thoughtfully prepared vagan...</div>
-        <p class="card-date">May 17, 2012 /<a class="card-read">Read...</a></p>
+        <div class="card-footer"><span>May 17, 2012/</span><a class="card-read">Read...</a></div>
     </div>
-    <!-- /.card --> 
+ 
     <div class="card">
         <div class="card-image">
             <img src="img/card-image3.jpg" alt="image"></div>
         <div class="card-title">Join us on Pinterest!</div>
         <div class="card-description">If I could curate a cookbook for you, this would be it.</div>
-        <p class="card-date">May 23, 2012 /<a class="card-read">Read...</a></p>
+        <div class="card-footer"><span>May 23, 2012 /</span> <a class="card-read">Read...</a></div>
     </div>
-    <!-- /.card --> 
+
     <div class="card">
         <div class="card-image">
         <img src="img/card-image4.jpg" alt="image"></div>
         <div class="card-title">Recipes from a Sunday Supper</div>
         <div class="card-description">I could not figure out what to do with the delectable slices of Pear Cake that I brought home from this wonderful Sunday supper - eat them slowly, a little bit at...</div>
-        <p class="card-date">May 17, 2012 /<a class="card-read">Read...</a></p>
+        <div class="card-footer"><span> May 17, 2012 /</span><a class="card-read">Read...</a></div>
     </div>
-    <!-- /.card --> 
      
 </seсtion>
-<!-- /.cards -->
 </main>
 </div>
-<!-- /.container -->
 <footer>
-        <div class="footer-left">
+        <div class="footer-links">
             <a href="#" class="footer-link">Privacy Policy</a>
             <a href="#" class="footer-link">Terms of Use</a>
             <a href="#" class="footer-link">Contact</a>
             <p>© 2016 Food Sense, all rights reserved.</p>
         </div>
-        <div class="footer-right">
+        <div class="footer-icon">
             <a href="#"><img src="img/twitter-footer.svg" alt="twitter"></a>
             <a href="#"><img src="img/fb-footer.svg" alt="Facebook"></a>
             <a href="#"><img src="img/rss-footer.svg" alt="rss"></a>
