fixed bacground images in aside menu

--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -9,35 +9,37 @@
 <body>
 <div class="container">
     <aside>
-        <a href="#"><img class="logo" src="img/logo.png" alt="logo"/></a>
-        <ul class="aside-menu">
-            <li class="aside-item">
-                <a href="#" class="item-link">
-                <img class="item-image" src="img/tastemakers.svg" alt="Tastemakers" />
-                    <span>Tastemakers</span>
+        <a href="#">
+            <img class="logo" src="img/logo.png" alt="logo"/>
+        </a>
+            <ul class="aside-menu">
+                <li class="aside-item">
+                    <a href="#" class="item-link taste">
+                    <!-- <img class="item-image" src="img/tastemakers.svg" alt="Tastemakers" /> -->
+                        <span>Tastemakers</span>
                 </a>
             </li>
             <li class="aside-item">
-                <a href="#" class="item-link">
-                <img class="item-image" src="img/blog.svg" alt="blog" />
+                <a href="#" class="item-link blog">
+                <!-- <img class="item-image" src="img/blog.svg" alt="blog" /> -->
                     <span>Blog</span>
                 </a>
             </li>
             <li class="aside-item">
-                <a href="#" class="item-link">
-                <img class="item-image" src="img/theAList.svg" alt="the A-List" />
+                <a href="#" class="item-link list">
+                <!-- <img class="item-image" src="img/theAList.svg" alt="the A-List" /> -->
                     <span>The A-List</span>
                 </a>
             </li> 
             <li class="aside-item">
-                <a href="#" class="item-link">
-                    <img class="item-image" src="img/contribure.svg" alt="Contribure" />
+                <a href="#" class="item-link contribure">
+                    <!-- <img class="item-image" src="img/contribure.svg" alt="Contribure" /> -->
                     <span>Contribure</span>
                 </a>
             </li>
             <li class="aside-item">
-                <a href="#" class="item-link">
-                <img class="item-image" src="img/about.svg" alt="About" />
+                <a href="#" class="item-link about">
+                <!-- <img class="item-image" src="img/about.svg" alt="About" /> -->
                         <span>About</span>
                     </a>
             </li>
@@ -82,11 +84,10 @@
         </div>
 
         <div class="tab">
-            <p class="tab-title">The A-List</p>
-            <p class="tab-description">Handpicked, absolute favorites</p>
+                 <p class="tab-title">The A-List</p>
+                <p class="tab-description">Handpicked, absolute favorites</p>
         </div>
 
-        
         <div class="tab active">
             <p class="tab-title">Contribute</p>
             <p class="tab-description">We want to hear from you</p>
