fixed tabs links

--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -69,23 +69,31 @@
 
     <section class="tabs">
         <div class="tab">
-            <p class="tab-title">Tastemakers</p>
-            <p class="tab-description">Feast your eyes & get reciepes!</p>
+            <a href="#">
+                <p class="tab-title">Tastemakers</p>
+                <p class="tab-description">Feast your eyes & get reciepes!</p>
+            </a>
         </div>
 
         <div class="tab">
-            <p class="tab-title">Blog</p>
-            <p class="tab-description">News, how-tos, stories, and more</p>
+            <a href="#">
+                <p class="tab-title">Blog</p>
+                <p class="tab-description">News, how-tos, stories, and more</p>
+            </a>
         </div>
 
         <div class="tab">
-                 <p class="tab-title">The A-List</p>
+            <a href="#">
+                <p class="tab-title">The A-List</p>
                 <p class="tab-description">Handpicked, absolute favorites</p>
+            </a>
         </div>
 
         <div class="tab active">
-            <p class="tab-title">Contribute</p>
-            <p class="tab-description">We want to hear from you</p>
+            <a href="#">
+                <p class="tab-title">Contribute</p>
+                <p class="tab-description">We want to hear from you</p>
+            </a>
         </div>
 
     </section>
