fixed cards links

--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -110,33 +110,53 @@
 
 <seсtion class="cards">
     <div class="card">
-        <div class="card-image">
-            <img src="img/card-image1.jpg" alt="image"></div>
-        <div class="card-title">2012's Best Summer Cookbooks</div>
+        <a href="#">
+            <div class="card-image">
+                <img src="img/card-image1.jpg" alt="image">
+            </div>
+        </a>
+        <a href="#">
+            <div class="card-title">2012's Best Summer Cookbooks</div>
+        </a>
         <div class="card-description">With the best of the season coming from “orchards, farms and gardens,” NPR has put together an impressive collection of 10 summer cookbooks.</div>
         <div class="card-footer"><span> May 23, 2012 /</span><a class="card-read">Read...</a></div>
     </div>
 
     <div class="card">
-        <div class="card-image">
-            <img src="img/card-image2.jpg" alt="image"></div>
-        <div class="card-title">How to Make Vegetable Chips</div>
+        <a href="#">
+            <div class="card-image">
+                <img src="img/card-image2.jpg" alt="image">
+            </div>
+        </a>
+        <a href="#">
+            <div class="card-title">How to Make Vegetable Chips</div>
+        </a>
         <div class="card-description">About a month ago, I ate almost an entire box of kale chips. My brother and I were visiting our cousin in Brooklyn, and before a very thoughtfully prepared vagan...</div>
         <div class="card-footer"><span>May 17, 2012/</span><a class="card-read">Read...</a></div>
     </div>
  
     <div class="card">
-        <div class="card-image">
-            <img src="img/card-image3.jpg" alt="image"></div>
-        <div class="card-title">Join us on Pinterest!</div>
+        <a href="#">
+            <div class="card-image">
+                <img src="img/card-image3.jpg" alt="image">
+            </div>
+        </a>
+        <a href="#">
+            <div class="card-title">Join us on Pinterest!</div>
+        </a>
         <div class="card-description">If I could curate a cookbook for you, this would be it.</div>
         <div class="card-footer"><span>May 23, 2012 /</span> <a class="card-read">Read...</a></div>
     </div>
 
     <div class="card">
-        <div class="card-image">
-        <img src="img/card-image4.jpg" alt="image"></div>
-        <div class="card-title">Recipes from a Sunday Supper</div>
+        <a href="#">
+            <div class="card-image">
+                <img src="img/card-image4.jpg" alt="image">
+            </div>
+        </a>
+        <a href="#">
+            <div class="card-title">Recipes from a Sunday Supper</div>
+        </a>
         <div class="card-description">I could not figure out what to do with the delectable slices of Pear Cake that I brought home from this wonderful Sunday supper - eat them slowly, a little bit at...</div>
         <div class="card-footer"><span> May 17, 2012 /</span><a class="card-read">Read...</a></div>
     </div>
