fixed type for input

--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -103,7 +103,7 @@
         <p class="subscribe-text">Sign up for out newsletter to receive a handpicked selection
          of the best stories, recipes, and news, delivered weekly to your inbox</p>
     <form action="#">
-        <input type="text" placeholder="Email">
+        <input type="email" placeholder="Email">
         <button class="subscribe-button">Subscribe</button>
     </form>
 </section>
