--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1.1</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media992.css">
 </head>
 <body>
 <div class="container">
