media queries for 768px-992px

--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -6,6 +6,7 @@
     <title>Task 1.1</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/media992.css">
+    <link rel="stylesheet" href="styles/media768.css">
 </head>
 <body>
 <div class="container">
