media queries for screen less then 480px

--- a/task 1.1/index.html
+++ b/task 1.1/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="styles/media992.css">
     <link rel="stylesheet" href="styles/media768.css">
     <link rel="stylesheet" href="styles/media480.css">
+    <link rel="stylesheet" href="styles/media-less480.css">
 </head>
 <body>
 <div class="container">
     <aside>
-        <a href="#">
-            <img class="logo" src="img/logo.png" alt="logo"/>
+        <a href="#" class="logo">
+            <img  src="img/logo.png" alt="logo"/> 
         </a>
             <ul class="aside-menu">
                 <li class="aside-item">
