added scss prepros in project, changed style files on scss files

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1.1</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/media992.css">
+    <link rel="stylesheet" href="build/style.css">
+    <!-- <link rel="stylesheet" href="styles/media992.css">
     <link rel="stylesheet" href="styles/media768.css">
     <link rel="stylesheet" href="styles/media480.css">
-    <link rel="stylesheet" href="styles/media-less480.css">
+    <link rel="stylesheet" href="styles/media-less480.css"> -->
 </head>
 <body>
 <div class="container">
