--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1.1</title>
     <link rel="stylesheet" href="build/style.css">
-    <!-- <link rel="stylesheet" href="styles/media992.css">
-    <link rel="stylesheet" href="styles/media768.css">
-    <link rel="stylesheet" href="styles/media480.css">
-    <link rel="stylesheet" href="styles/media-less480.css"> -->
+
 </head>
 <body>
 <div class="container">
@@ -114,7 +111,7 @@
     </form>
 </section>
 
-<seсtion class="cards">
+<section class="cards">
     <div class="card">
         <a href="#">
             <div class="card-image">
@@ -167,7 +164,7 @@
         <div class="card-footer"><span> May 17, 2012 /</span><a class="card-read">Read...</a></div>
     </div>
      
-</seсtion>
+</section>
 </main>
 </div>
 <footer>
