--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1.1</title>
+    <title>Food Sense</title>
     <link rel="stylesheet" href="build/style.css">
 
 </head>
